# src/swagger/swagger.json
@@ -153,6 +153,58 @@
                 }
             }
         },
+        "/mentor/image": {
+            "post": {
+                "description": "Upload your best photo",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "mentor"
+                ],
+                "summary": "Upload Image",
+                "parameters": [
+                    {
+                        "description": "base64",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/PostImageRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "$ref": "#/definitions/Image"
+                        }
+                    },
+                    "400": {
+                        "description": "error occurred",
+                        "schema": {
+                            "$ref": "#/definitions/BasicResponse"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/BasicResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "error occurred",
+                        "schema": {
+                            "$ref": "#/definitions/BasicResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/mentor/{id}": {
             "get": {
                 "description": "Give you mentor without personal fields",
@@ -395,6 +447,9 @@
                         "senior"
                     ]
                 },
+                "image": {
+                    "$ref": "#/definitions/Image"
+                },
                 "language": {
                     "type": "array",
                     "items": {
@@ -430,6 +485,17 @@
                 }
             }
         },
+        "Image": {
+            "type": "object",
+            "properties": {
+                "144x144": {
+                    "type": "string"
+                },
+                "512x512": {
+                    "type": "string"
+                }
+            }
+        },
         "Mentor": {
             "type": "object",
             "required": [
@@ -450,6 +516,9 @@
                         "middle",
                         "senior"
                     ]
+                },
+                "image": {
+                    "$ref": "#/definitions/Image"
                 },
                 "language": {
                     "type": "array",
@@ -507,8 +576,7 @@
             "required": [
                 "customerName",
                 "customerTelegram",
-                "mentorId",
-                "tariffIndex"
+                "mentorId"
             ],
             "properties": {
                 "customerName": {
@@ -524,6 +592,14 @@
                     "type": "integer",
                     "maximum": 2,
                     "minimum": 0
+                }
+            }
+        },
+        "PostImageRequest": {
+            "type": "object",
+            "properties": {
+                "base64": {
+                    "type": "string"
                 }
             }
         },
@@ -615,6 +691,9 @@
                         "middle",
                         "senior"
                     ]
+                },
+                "image": {
+                    "$ref": "#/definitions/Image"
                 },
                 "language": {
                     "type": "array",
